tests/snapshots/test_runner__tests__compiler__typecheck__string_interpolation_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let x
  : Integer
  = "I am #{"Hello #{"World"}"} years old"

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/string_interpolation_2.kk:3:5
  │
3 │   = "I am #{"Hello #{"World"}"} years old"
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Integer     | + String    |
    +---------------+-------------+
